<resources>

    <!-- app -->
    <string name="app_name">Cheddar</string>
    <string name="app_name_lowercase">cheddar</string>
    <string name="app_name_uppercase_period">CHEDDAR.</string>
    <string name="app_name_uppercase">CHEDDAR</string>
    <string name="app_tagline">Make a friend. Find a date. Troll.</string>
    <string name="app_value_prop">Anonymous group messaging for Northeastern</string>

    <!-- Common -->
    <string name="common_cancel">Cancel</string>
    <string name="common_submit">Submit</string>

    <!-- onboard -->
    <string name="onboard_cheddar_value_prop_1">Anonymous group</string>
    <string name="onboard_cheddar_value_prop_2">messaging for</string>
    <string name="onboard_match_value_prop_1">Get matched with up</string>
    <string name="onboard_match_value_prop_2">to 4 huskies per chat</string>
    <string name="onboard_group_value_prop_1">Join up to five</string>
    <string name="onboard_group_value_prop_2">group chats at once</string>
    <string name="onboard_error_join_chat">Couldn\'t join chat.. Try again?</string>

    <!-- different school -->
    <string name="different_school_header">Coming soon!</string>
    <string name="different_school_subheader">Enter your university and email to get notified when Cheddar comes to your school!</string>
    <string name="different_school_school_hint">University</string>
    <string name="different_school_email_hint">Email</string>
    <string name="different_school_thanks">Thanks! Check your email for future updates on Cheddar</string>
    <string name="different_school_error_school">Please enter your university name</string>
    <string name="different_school_error_email_missing">Please enter your email</string>
    <string name="different_school_error_email_invalid">Invalid email</string>

    <!-- verify email -->
    <string name="verify_email_not_verified">Please check your email for the verification link!</string>
    <string name="verify_email_resent">Verification email has been resent to %1$s</string>
    <string name="verify_email_error_resend_failed">Verification email could not be sent. Please try again.</string>

    <!-- welcome -->
    <string name="welcome_email_hint">Husky email address</string>
    <string name="welcome_password_hint">Password</string>
    <string name="welcome_confirm_password_hint">Confirm password</string>
    <string name="welcome_action_login">Login</string>
    <string name="welcome_action_register">Register</string>
    <string name="welcome_action_switch_to_login">Already have an account?</string>
    <string name="welcome_action_switch_to_register">Need to register an account?</string>
    <string name="welcome_action_different_school">Change school</string>
    <string name="welcome_action_reset_password">Forgot password</string>
    <string name="welcome_register_loading">Registering&#8230;</string>
    <string name="welcome_register_failed">Couldn\'t register user. Please try again</string>
    <string name="welcome_login_loading">Logging in&#8230;</string>
    <string name="welcome_dialog_reset_password_desc">Enter your email to reset your password.</string>
    <string name="welcome_dialog_reset_password_hint">Email</string>
    <string name="welcome_dialog_reset_password_check_email">Check your email for a link to reset your password.</string>
    <string name="welcome_dialog_registration_code_desc">Non-husky emails require a code to register.</string>
    <string name="welcome_dialog_registration_code_hint">Registration code</string>
    <string name="welcome_error_email_invalid">Invalid email</string>
    <string name="welcome_error_credentials">Incorrect email or password</string>
    <string name="welcome_error_password_length">Password must be at least 6 characters</string>
    <string name="welcome_error_mismatch_password">Passwords don\'t match</string>
    <string name="welcome_error_network">Please check your network connection</string>


    <!-- chat -->
    <string name="chat_join_chat">Joining chat&#8230;</string>
    <string name="chat_waiting">You\'ll receive a notification when someone joins the chat.</string>
    <string name="chat_no_members">Waiting for others..</string>
    <string name="chat_members">%1$d members ></string>
    <string name="chat_message_input_hint">Say cheese!</string>
    <string name="chat_send_message">Send</string>
    <string name="chat_new_messages">NEW MESSAGES</string>
    <string name="chat_title_group">Group</string>
    <string name="chat_action_feedback">Feedback</string>
    <string name="chat_action_name_room">Rename Room</string>
    <string name="chat_action_view_members">View Members</string>
    <string name="chat_action_report">Report User</string>
    <string name="chat_action_leave">Leave Chat</string>
    <string name="chat_leave_confirm">Leave</string>
    <string name="chat_leave_chat">Leaving chat&#8230;</string>
    <string name="chat_alias_list_header">Active Members</string>
    <string name="chat_alias_timestamp">Joined %1$s</string>
    <string name="chat_presence_joined">%1$s has joined.</string>
    <string name="chat_presence_left">%1$s has left.</string>
    <string name="chat_copied_to_clipboard">Copied message.</string>
    <string name="chat_error_change_chat_room_name_failed">Failed to change room name.</string>
    <string name="chat_error_load_messages_failed">Failed to load messages.</string>
    <string name="chat_error_message_failed">Could not deliver message. Check your connection settings?</string>
    <string name="chat_error_network_connection_error">NO NETWORK CONNECTION</string>
    <string name="chat_error_play_services_missing">"Couldn\'t find Google Play Services. Push notifications will not work."</string>
    <string name="chat_name_name_hint">Room Name</string>
    <string name="chat_name_dialog_title">Rename Room</string>
    <string name="chat_name_dialog_ok">Set</string>
    <string name="chat_name_dialog_error_empty">Room name can\'t be empty!</string>
    <string name="chat_name_dialog_error_max_length">Room name is too long</string>

    <!-- list -->
    <string name="list_title">Messages</string>
    <string name="list_logout">Logging out&#8230;</string>
    <string name="list_action_join">Join new chat</string>
    <string name="list_action_feedback">Send Feedback</string>
    <string name="list_action_logout">Logout</string>
    <string name="list_error_logout">Couldn\'t log out. Try again?</string>
    <string name="list_error_join_chat_failed">Couldn\'t join new chat.</string>
    <string name="list_error_join_chat_too_many">You can only be in 5 chat rooms at once</string>
    <string name="list_error_get_list">Couldn\'t load messages.</string>
    
    <!-- join chat -->
    <string name="join_chat_title">Join new chat</string>


    <!-- gcm -->
    <string name="gcm_registration_failed">Couldn\'t register for push notifications.</string>
    <string name="gcm_unregistration_failed">Couldn\'t unregister for push notifications.</string>

    <!-- feedback -->
    <string name="feedback_title">Send feedback</string>
    <string name="feedback_desc">Is something weird or broken? Any and all feedback is sent directly to the Cheddar team!</string>
    <string name="feedback_hint">What\'s up?</string>
    <string name="feedback_thanks">Thanks for your feedback!</string>
    <string name="feedback_empty">Please add some feedback first.</string>
    <string name="feedback_confirm">Send</string>

    <!-- force update -->
    <string name="force_update_title">Update required</string>
    <string name="force_update_desc">In order to continue using Cheddar, you need to update the app.</string>
    <string name="force_update_confirm">Update</string>

    <!-- report -->
    <string name="report_coming_soon">Coming soon!</string>

    <!-- notif -->
    <string name="notif_title">Cheddar</string>

    <!-- debug -->
    <string name="debug_action_clear">Reset</string>
    <string name="debug_label"></string>
</resources>
