<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.chat.ChatActivity_">
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/chat_action_feedback"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_name_room"
        android:orderInCategory="100"
        android:title="@string/chat_action_name_room"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_report"
        android:orderInCategory="200"
        android:title="@string/chat_action_report"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_leave"
        android:orderInCategory="300"
        android:title="@string/chat_action_leave"
        app:showAsAction="never" />
</menu>
