<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.list.ChatRoomListActivity_">
    <item
        android:id="@+id/action_join"
        android:icon="@drawable/action_join"
        android:orderInCategory="100"
        android:title="@string/list_action_join"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="200"
        android:title="@string/list_action_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="400"
        android:title="@string/list_action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug_clear"
        android:orderInCategory="500"
        android:title="@string/debug_action_clear"
        app:showAsAction="never" />
</menu>
