<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <View
        android:id="@+id/center_anchor"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true" />

    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/center_anchor"
        android:layout_marginBottom="64dp" />

    <TextView
        android:id="@+id/app_name"
        fontPath="GothamRounded-Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tagline"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name_lowercase"
        android:textSize="52sp"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/anchor"
        android:layout_centerHorizontal="true"
        android:text="@string/app_tagline"
        android:textSize="21sp" />

    <LinearLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tagline"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="64dp"
        android:visibility="visible"
        tools:visibility="gone">

        <Button
            android:id="@+id/welcome_register"
            style="@style/WelcomeButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_action_register"
            android:theme="@style/ColoredButton" />

        <Button
            android:id="@+id/welcome_login"
            style="@style/WelcomeButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_action_login" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tagline"
        android:alpha="0"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="64dp"
        android:visibility="gone">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/welcome_email_hint"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/welcome_password_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_login"
            style="@style/WelcomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_action_login"
            android:theme="@style/ColoredButton" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_action_switch_to_register"
            android:textColor="@color/text_secondary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tagline"
        android:alpha="0"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/welcome_email_hint"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/welcome_password_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/welcome_confirm_password_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_register"
            style="@style/WelcomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_action_register"
            android:theme="@style/ColoredButton" />

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_action_switch_to_login"
            android:textColor="@color/text_secondary" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/register_different_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/welcome_action_different_school"
            android:textColor="@color/text_secondary" />
    </LinearLayout>


</RelativeLayout>